# agent-docs

./: .dockerignore  Cargo.toml  DESIGN.md  Dockerfile  README.md  STATUS.md  docker-compose.yml  llms.txt
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
src/: auth.rs  db.rs  events.rs  lib.rs  main.rs  rate_limit.rs  routes.rs
tests/: integration_tests.rs
